# photoChopp

./: CMakeLists.txt  button.cpp  button.hpp  image.cpp  image.hpp  main.cpp
